--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#1d67f1",
-    "titleBar.activeBackground": "#1d67f1",
+    "activityBar.background": "#b397f5",
+    "titleBar.activeBackground": "#b397f5",
     "titleBar.activeForeground": "#edfefc"
   },
   "material-icon-theme.folders.associations": {
